[gd_scene load_steps=3 format=3 uid="uid://f2ithhiie7xy"]

[ext_resource type="Script" path="res://NightManager.gd" id="1_f3jum"]
[ext_resource type="Texture2D" uid="uid://bdmatmhi472s" path="res://icons8-monday-48.png" id="1_wqdqo"]

[node name="Night" type="Node2D"]
script = ExtResource("1_f3jum")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_direction = 3
offset_left = -1910.0
offset_top = 21.0
offset_right = -1731.0
offset_bottom = 125.0

[node name="Date" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_wqdqo")
expand_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_left = 5.0
offset_top = 28.0
offset_right = 1920.0
offset_bottom = 111.0

[node name="ActionsLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Actions: 0"

[node name="TabContainer" type="TabContainer" parent="."]
offset_top = 177.0
offset_right = 1918.0
offset_bottom = 1077.0
theme_override_font_sizes/font_size = 36
tab_alignment = 1

[node name="Sell Artwork" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Sell Artwork"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="TextureRect" type="TextureRect" parent="TabContainer/Sell Artwork/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 400)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Sell Artwork/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="LeftButton" type="Button" parent="TabContainer/Sell Artwork/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Previous"

[node name="RightButton" type="Button" parent="TabContainer/Sell Artwork/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Next"

[node name="SellCurrentButton" type="Button" parent="TabContainer/Sell Artwork/VBoxContainer"]
custom_minimum_size = Vector2(750, 150)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Sell Current Artwork"

[node name="Steal Artwork" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
